JavaScript is getting there. Thanks, Elijah git status

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 		<ul>
 			<li>home</li>
-			<li>snacks</li>
+			<li id="snackFilter">snacks</li>
 			<li id="breakfastFilter">breakfast</li>
-			<li>lunch / dinner</li>
+			<li id="mealFilter">lunch / dinner</li>
 			<li>par-tay</li>
 		</ul>
 
@@ -26,47 +26,57 @@
 	</nav>
 
 	<div class="container">
-		<div class="recipe"  id="breakfast">
+		<div class="recipe breakfast">
 			<h3>breakfast</h3>
 			<img src="imgs/ok.gif">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
+			tempor incididunt ut labore et dolore magna aliqua.</p> | <!-- <p class="category">breakfast</p> -->
 		</div>
 
-		<div class="recipe">
+		<div class="recipe breakfast">
 			<h3>recipe name</h3>
 			<img src="imgs/ok.gif">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
 		</div>
 
-		<div class="recipe">
+		<div class="recipe snack">
 			<h3>recipe name</h3>
 			<img src="imgs/ok.gif">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
 		</div>
 
-		<div class="recipe">
+
+		<div class="recipe breakfast">
+			<h3>breakfast</h3>
+			<img src="imgs/ok.gif">
+			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua.</p> | <!-- <p class="category">breakfast</p> -->
+		</div>
+
+		<div class="recipe snack">
 			<h3>recipe name</h3>
 			<img src="imgs/ok.gif">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
 		</div>
 
-		<div class="recipe">
+		<div class="recipe meal">
 			<h3>recipe name</h3>
 			<img src="imgs/ok.gif">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
 		</div>
 
-		<div class="recipe">
+		<div class="recipe meal">
 			<h3>recipe name</h3>
 			<img src="imgs/ok.gif">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
 		</div>
+
+
 
 	</div>
 </body>
