all filters working, starting on responsive sizing.

--- a/index.html
+++ b/index.html
@@ -16,21 +16,30 @@
 
 		<ul>
 			<li>home</li>
+<!-- 			<li id="moreRecipes">recipes</li>
+			<ul id="subnav"> -->
 			<li id="snackFilter">snacks</li>
 			<li id="breakfastFilter">breakfast</li>
 			<li id="mealFilter">lunch / dinner</li>
-			<li>par-tay</li>
+<!-- 			</ul>
+ -->		<li>other</li>
+			<li>other</li>
 		</ul>
 
 
 	</nav>
 
 	<div class="container">
+
+		<div>
+			Welcome to allergy-free recipe-land!
+		</div>	
+
 		<div class="recipe breakfast">
 			<h3>breakfast</h3>
 			<img src="imgs/ok.gif">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p> | <!-- <p class="category">breakfast</p> -->
+			tempor incididunt ut labore et dolore magna aliqua.</p> | <p id="breakfastFilter">breakfast</p>
 		</div>
 
 		<div class="recipe breakfast">
