--- a/index.html
+++ b/index.html
@@ -6,83 +6,90 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="js/script.js"></script>
-	
+
 </head>
 <body>
 
 	<nav>
 
 		<h1>reciplease</h1>
-
+		<p>worry-free allergy-friendly eats</p>
 		<ul>
-			<li>home</li>
-<!-- 			<li id="moreRecipes">recipes</li>
-			<ul id="subnav"> -->
+			<li><a href="index.html" id="home">home</a></li>
+			<li id="allRecipes">ALL recipes</li>
 			<li id="snackFilter">snacks</li>
 			<li id="breakfastFilter">breakfast</li>
 			<li id="mealFilter">lunch / dinner</li>
-<!-- 			</ul>
- -->		<li>other</li>
-			<li>other</li>
+			<li><a href="contact.html">contact</a></li>
+
 		</ul>
 
 
 	</nav>
 
-	<div class="container">
 
-		<div>
-			Welcome to allergy-free recipe-land!
+
+	<div class="container">
+		<div id="welcome">
+			<p><strong>Welcome to allergy-free recipe-land!</strong></p>
+			<p>Did your doctor just give you an insane diet that it seems like no modern human can follow? No worries &mdash; we have your back with quick, simple, yeast-and-mold-free-diet recipes.</p>
 		</div>	
 
 		<div class="recipe breakfast">
-			<h3>breakfast</h3>
-			<img src="imgs/ok.gif">
+			<h3>breakfast: recipe name</h3>
+			<img src="imgs/breakfast.jpg">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p> | <p id="breakfastFilter">breakfast</p>
-		</div>
-
-		<div class="recipe breakfast">
-			<h3>recipe name</h3>
-			<img src="imgs/ok.gif">
-			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
-		</div>
-
-		<div class="recipe snack">
-			<h3>recipe name</h3>
-			<img src="imgs/ok.gif">
-			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
-		</div>
-
-
-		<div class="recipe breakfast">
-			<h3>breakfast</h3>
-			<img src="imgs/ok.gif">
-			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p> | <!-- <p class="category">breakfast</p> -->
-		</div>
-
-		<div class="recipe snack">
-			<h3>recipe name</h3>
-			<img src="imgs/ok.gif">
-			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
+			tempor incididunt ut labore et dolore magna. <a href="recipes.html">MAKE IT.</a></p> 
 		</div>
 
 		<div class="recipe meal">
-			<h3>recipe name</h3>
-			<img src="imgs/ok.gif">
+			<h3>lunch / dinner: recipe name</h3>
+			<img src="imgs/dinner.jpg">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
+			tempor incididunt ut labore et dolore magna. <a href="recipes.html">MAKE IT.</a></p> 
+		</div>
+
+		<div class="recipe breakfast">
+			<h3>breakfast: recipe name</h3>
+			<img src="imgs/breakfast.jpg">
+			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna. <a href="recipes.html">MAKE IT.</a></p> 
+		</div>
+
+		<div class="recipe snack">
+			<h3>snack: recipe name</h3>
+			<img src="imgs/snack.jpg">
+			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna.<a href="recipes.html">MAKE IT.</a></p> 
+		</div>
+
+
+		<div class="recipe breakfast">
+			<h3>breakfast: recipe name</h3>
+			<img src="imgs/breakfast.jpg">
+			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna. <a href="recipes.html">MAKE IT.</a></p>
+		</div>
+
+		<div class="recipe snack">
+			<h3>snack: recipe name</h3>
+			<img src="imgs/snack.jpg">
+			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna. <a href="recipes.html">MAKE IT.</a></p>
 		</div>
 
 		<div class="recipe meal">
-			<h3>recipe name</h3>
-			<img src="imgs/ok.gif">
+			<h3>lunch / dinner: recipe name</h3>
+			<img src="imgs/snack.jpg">
 			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua.</p> | <p class="category">breakfast</p>
+			tempor incididunt ut labore et dolore magna. <a href="recipes.html">MAKE IT.</a></p>
+		</div>
+
+		<div class="recipe meal">
+			<h3>lunch / dinner: recipe name</h3>
+			<img src="imgs/dinner.jpg">
+			 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna. <a href="recipes.html">MAKE IT.</a></p>
 		</div>
 
 
